--- a/index.html
+++ b/index.html
@@ -137,10 +137,11 @@ function initGame() {
                 c1 = colors[Math.floor(Math.random() * 4)];
                 do { c2 = colors[Math.floor(Math.random() * 4)]; } while (c2 === c1);
                 //sounds.pop.play().catch(() => {});
+                sounds[c1].currentTime = 0;
                 sounds[c1].play().catch(() => {}); 
                 setTimeout(() => {
-                    sounds[c2].level.currentTime = 0;
-                    sounds[c2].level.play().catch(() => {});
+                    sounds[c2].currentTime = 0;
+                    sounds[c2].play().catch(() => {});
                 }, 1000);
                 
             }
